Fix for bug #21094 (set_error_handler can not accept methods), by Timm Friebe

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@124102 c90b9560-bf6c-de11-be94-00142212c4b1